# IntroCD

./: .gitignore  README.md  Tarea-1_Valeria-Romero.ipynb  pyproject.toml  reproducir_informe.py  tarea1.ipynb  tarea2.ipynb
notebooks/: tarea1_ncastroman.ipynb  tarea1_vromero.ipynb
src/: utils.py
tarea1/: publications_data_profiling_report.html
tarea1/src/: __init__.py
tarea2/: reproducir_figuras.py  tarea2.ipynb
tarea2/notebooks/: tarea2_ncastroman.ipynb  tarea2_vromero.ipynb
