[project]
name = "introcd"
version = "0.2.0"
description = "Introducción a la Ciencia de Datos - Tareas 1 y 2"
authors = [
    {name = "Nicole"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "networkx>=3.0",
    "datasets>=2.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "plotly (>=6.7.0,<7.0.0)",
    "missingno>=0.5",
    "wordcloud>=1.9",
    "ydata-profiling>=4.0",
    "scikit-learn>=1.3",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
